--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/iot_app
-spring.datasource.username=iotapp
-spring.datasource.password=eniso2021
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_URL}:3306/${MYSQL_DB_NAME}
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
