--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    			<groupId>org.javassist</groupId>
+    			<artifactId>javassist</artifactId>
+    			<version>3.23.1-GA</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>RELEASE</version>
